--- a/src/PP/RequestBundle/Resources/views/Request/sideInfo.html.twig
+++ b/src/PP/RequestBundle/Resources/views/Request/sideInfo.html.twig
@@ -42,24 +42,21 @@
 </div>
     
 <div class='widget footer'>
-    <ul>
+    <ul>        
         <li>
-            <a href='#' title=''>Français (France)</a>
+            <a target="_self" href='{{ url('page_privacy') }}' title="Privacy">Privacy</a>
         </li>
         <li>
-            <a href='#' title=''>Confidentialité</a>
+            <a target="_self" href='{{ url('page_terms') }}' title='terms'>Terms</a>
         </li>
         <li>
-            <a href='#' title=''>Conditions d’utilisation</a>
+            <a target="_self" href='{{ url('page_cookies') }}' title='cookies'>Cookies</a>
         </li>
         <li>
-            <a href='#' title=''>Cookies</a>
+            <a target="_self" href='{{ url('page_about') }}' title='about'>About</a>
         </li>
         <li>
-            <a href='#' title=''>À propos</a>
-        </li>
-        <li>
-            <a href='#' title=''>Aide</a>
+            <a target="_self" href='{{ url('page_license') }}' title='License'>License</a>
         </li>
     </ul>
     <span class='copy'>Prestapic © 2015</span>
