Fix username forbidden + help center page

--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -24,11 +24,13 @@
 <body id="body">
     
     <div class="container">
+        {% block header %}
         <header id="header" class="navbar">
                 <div class="content" ng-app="headerApp">
                         {{ render(controller("PPHeaderBundle:Header:showHeader")) }}                                        
                 </div>
         </header>
+        {% endblock %}
 
         {# ALERT BANNER #}        
         <section id="alert-banner" class="alert-banner">
