--- a/src/PP/PageBundle/Resources/views/layout.html.twig
+++ b/src/PP/PageBundle/Resources/views/layout.html.twig
@@ -7,14 +7,16 @@
   
 {% endblock %}
 
+{% block header %}
+    {{ render(controller("PPPageBundle:Page:header")) }}   
+{% endblock%}
+    
 {% block bellowHeader %}
     
 {% endblock %}
 
 {% block body %}
-    
-    
-    
+            
     {% block pageBody %}
 
     {% endblock %}
