--- a/src/PP/PageBundle/Resources/views/license/license.html.twig
+++ b/src/PP/PageBundle/Resources/views/license/license.html.twig
@@ -7,5 +7,8 @@
 
 {% block pageBody %}
     <h1>License</h1>
+    <p>
+        All photos published on Prestapic are licensed under Creative Commons Zero which means you can copy, modify, distribute and use the photos for free, including commercial purposes, without asking permission from or providing attribution to the photographer or Prestapic.
+    </p>
     
 {% endblock %}
