--- a/src/PP/ReportBundle/Resources/views/Popup/reportForm.html.twig
+++ b/src/PP/ReportBundle/Resources/views/Popup/reportForm.html.twig
@@ -29,7 +29,8 @@
                     </div>
                 </form>
             </div>
-            <div id="reportContainerAfter">
+            <div id="reportContainerAfter" class="box-text">
+                
             </div>
         </div>        
     </div>
