--- a/src/PP/UserBundle/Resources/public/css/style.sass
+++ b/src/PP/UserBundle/Resources/public/css/style.sass
@@ -60,6 +60,7 @@ article.profile-card
 			.username
 				display: block
 				line-height: 22px
+				word-wrap: break-word
 
 				a
 					font-size: 18px
@@ -72,6 +73,7 @@ article.profile-card
 			.screenname
 				display: block
 				line-height: 14px
+				word-wrap: break-word
 
 				a
 					color: #777
@@ -257,10 +259,12 @@ section.profile
 			font-size: 40px
 			font-weight: 600
 			margin: 7px 0 0
+			word-wrap: break-word
 
 		.screenname
 			font-size: 18px
 			color: rgba(255,255,255,.75)
+			word-wrap: break-word
 
 		.bio
 			font-size: 20px
