--- a/src/PP/HeaderBundle/Resources/public/css/style.sass
+++ b/src/PP/HeaderBundle/Resources/public/css/style.sass
@@ -139,7 +139,7 @@ header
 								content: $icon-filters
 
 						button.go-search
-							background: #F3F3F3
+							background: #eee
 							margin-right: 5px
 
 							&:hover, &:focus
@@ -334,7 +334,7 @@ header
 								text-decoration: none
 
 						&.notification
-							background: #F3F3F3
+							background: #eee
 							color: #ccc
 
 							&:hover, &:focus
@@ -380,7 +380,6 @@ header
 
 						&.account
 							background: white
-							border: 1px solid white
 
 							img
 								width: 100%
