--- a/src/PP/PageBundle/Resources/views/help/header.html.twig
+++ b/src/PP/PageBundle/Resources/views/help/header.html.twig
@@ -1,5 +1,8 @@
-<div>
-    <h1>Gros header</h1>
-    <a href="{{ url("page_help") }}">Help center</a>
-    <a href="{{ url("pp_request_homepage") }}">Back to Prestapic</a>
-</div>
+<header class="helpcenter">
+	<div class="content">
+		<h1 class="logo">
+            <a tabindex="1" target="_self" href="{{ url("page_help") }}" title="Prestapic">Prestapic</a> 
+        </h1>
+        <a class="button" href="{{ url("pp_request_homepage") }}">Back to Prestapic</a>
+	</div>
+</header>
