--- a/src/PP/RequestBundle/Resources/public/css/style.sass
+++ b/src/PP/RequestBundle/Resources/public/css/style.sass
@@ -82,6 +82,7 @@ section.main
 					font-size: 30px
 					float: left
 					line-height: 30px
+					word-wrap: break-word
 
 					a
 						&:hover
@@ -104,6 +105,7 @@ section.main
 					font-size: 17px
 					display: block
 					float: left
+					word-wrap: break-word
 
 				.author-container
 					width: 285px
@@ -111,6 +113,7 @@ section.main
 					display: inline-block
 					float: left
 					font-size: 15px
+					word-wrap: break-word
 
 					a.avatar
 						width: 48px
@@ -125,10 +128,12 @@ section.main
 						font-size: 15px
 						font-weight: 400
 						padding-top: 3px
+						word-wrap: break-word
 
 					a.author-username
 						display: inline-block
 						font-size: 19px
+						word-wrap: break-word
 
 				.tag-list
 					width: 445px
@@ -592,11 +597,13 @@ section.main
 						float: left
 						margin-left: 15px
 						position: relative
+						word-wrap: break-word
 
 						a.username
 							color: #444
 							font-weight: 600
 							display: block
+							word-wrap: break-word
 
 							&:hover
 								color: #5E1C1B
@@ -759,11 +766,11 @@ section.main
 					display: inline
 
 					&:after
-						content: "-"
+						content: "\00b7"
 						margin: 0 5px
 
 				li:last-child:after
-					content: " "
+					content: ""
 
 			.copy
 				margin-top: 10px
